tests/baselines/reference/constructorOverloads4.errors.txt
==== tests/cases/compiler/constructorOverloads4.ts (2 errors) ====
    declare module M {    
        export class Function {
            constructor(...args: string[]);
        }
        export function Function(...args: any[]): any;
                        ~~~~~~~~
!!! constructorOverloads4.ts(5,21): error TS2000: Duplicate identifier 'Function'.
        export function Function(...args: string[]): Function;
                        ~~~~~~~~
!!! constructorOverloads4.ts(6,21): error TS2000: Duplicate identifier 'Function'.
    }
    
    
    (new M.Function("return 5"))();
    M.Function("yo");
    